Mejorando código 🧰